# hse_cpp_final_project

./: .gitignore  CMakeLists.txt  README.md
include/: CorridorState.hpp  Door.hpp  Game.hpp  IStudent.hpp  MainMenuState.hpp  PetStudent.hpp  ResourceManager.hpp  RoomAction.hpp  RoomConfig.hpp  RoomState.hpp  RoomType.hpp  State.hpp  StateManager.hpp  Student.hpp  World.hpp
src/: Game.cpp  PetStudent.cpp  ResourceManager.cpp  StateManager.cpp  Student.cpp  World.cpp  main.cpp
src/docs/: architecture.md  doors_config.md
src/states/: CorridorState.cpp  MainMenuState.cpp  RoomState.cpp
tests/: test_resource_manager.cpp  test_state_manager.cpp  test_student.cpp  test_world_rooms.cpp  test_world_time.cpp
